# Pico2Test

./: .gitmodules  CMakeLists.txt  README.md  draw.py  mnist_digit.txt
.devcontainer/: Dockerfile  devcontainer.json
lib/neural_network/: build.zig  build.zig.zon
lib/neural_network/.zig-cache/c/6752eb9a8db6390675691e8d3718606e/: options.zig
lib/neural_network/.zig-cache/o/2cd5999de381fd7221da94c444dfa0f6/: dependencies.zig
lib/neural_network/.zig-cache/o/5b00e76b32c1e2ff50d3767d65ffd034/: dependencies.zig
lib/neural_network/.zig-cache/o/b28eba3a8e4fc7c27a85391e93cba2f6/: dependencies.zig
lib/neural_network/.zig-cache/o/cf66e30de7ae8794e63b85238a77405a/: dependencies.zig
lib/neural_network/src/: lib.zig
src/: main.c
